--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -1,5 +1,5 @@
 
-@book{davidson_turbulence_2015,
+@book{davidsonTurbulenceIntroductionScientists2015,
 	address = {Oxford},
 	edition = {2nd ed},
 	title = {Turbulence: {An} {Introduction} for {Scientists} and {Engineers}},
@@ -12,7 +12,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\9X6E2QE3\\Davidson - 2015 - Turbulence An Introduction for Scientists and Engineers.pdf:application/pdf},
 }
 
-@article{villermaux_mixing_2019,
+@article{villermauxMixingStirring2019,
 	title = {Mixing {Versus} {Stirring}},
 	volume = {51},
 	issn = {0066-4189, 1545-4479},
@@ -30,7 +30,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\GG24X4ZB\\Villermaux - 2019 - Mixing Versus Stirring.pdf:application/pdf},
 }
 
-@article{brandt_particle-laden_2022,
+@article{brandtParticleLadenTurbulenceProgress2022,
 	title = {Particle-{Laden} {Turbulence}: {Progress} and {Perspectives}},
 	volume = {54},
 	issn = {0066-4189, 1545-4479},
@@ -49,116 +49,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\NA6Z5RXI\\Brandt and Coletti - 2022 - Particle-Laden Turbulence Progress and Perspectives.pdf:application/pdf},
 }
 
-@article{hackl_multi-particle_2011,
-	title = {Multi-particle and tetrad statistics in numerical simulations of turbulent relative dispersion},
-	volume = {23},
-	issn = {1070-6631, 1089-7666},
-	url = {https://pubs.aip.org/pof/article/23/6/065103/838893/Multi-particle-and-tetrad-statistics-in-numerical},
-	doi = {10.1063/1.3586803},
-	abstract = {The evolution in size and shape of three and four-particle clusters (triangles and tetrads, respectively) in isotropic turbulence is studied using direct numerical simulations at grid resolution up to 40963 and Taylor-scale Reynolds numbers from 140 to 1000. A key issue is the attainment of inertial range behavior at high Reynolds number, while the small- and large-time limits of ballistic and diffusive regimes, respectively, are also considered in some detail. Tetrad size expressed by the volume (V) and (more appropriately) the gyration radius (R) is shown to display inertial range scaling consistent with a Richardson constant close to 0.56 for two-particle relative dispersion. For tetrads of initial size in a suitable range moments of shape parameters, including the ratio V2/3/R2 and normalized eigenvalues of a moment-of-inertia-like dispersion tensor, show a regime of near-constancy which is identified with inertial-range scaling. Sheet-like structures are dominant in this period, while pancakes and needles are more prevalent at later times. For triangles taken from different faces of each tetrad effects of the initial shape (isosceles right-angled or equilateral) are retained only for about one Batchelor time scale. In the inertial range there is a prevalence of nearly isosceles triangles of two long sides and one short side, representing one particle moving away from the other two which are still close together. In general, measures of shape display asymptotic scaling ranges more readily than measures of size. With some caveats, the simulation results are also compared with the limited literature available for multiparticle cluster dispersion in turbulent flow.},
-	language = {en},
-	number = {6},
-	urldate = {2024-09-19},
-	journal = {Physics of Fluids},
-	author = {Hackl, J. F. and Yeung, P. K. and Sawford, B. L.},
-	month = jun,
-	year = {2011},
-	pages = {065103},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\E4T3WL7X\\Hackl et al. - 2011 - Multi-particle and tetrad statistics in numerical simulations of turbulent relative dispersion.pdf:application/pdf},
-}
-
-@article{ishihara_study_2009,
-	title = {Study of {High}–{Reynolds} {Number} {Isotropic} {Turbulence} by {Direct} {Numerical} {Simulation}},
-	volume = {41},
-	issn = {0066-4189, 1545-4479},
-	url = {https://www.annualreviews.org/doi/10.1146/annurev.fluid.010908.165203},
-	doi = {10.1146/annurev.fluid.010908.165203},
-	abstract = {We review studies of the statistics of isotropic turbulence in an incompressible ﬂuid at high Reynolds numbers using direct numerical simulation (DNS) from the viewpoint of fundamental physics. The Reynolds number achieved by the largest DNS, with 40963 grid points, is comparable with the largest Reynolds number in laboratory experiments. The high-quality DNS data in the inertial subrange and the dissipative range enable the examination of detailed statistics at small scales, such as the normalized energy-dissipation rate, energy and energy-ﬂux spectra, the intermittency of the velocity gradients and increments, scaling exponents, and ﬂow-ﬁeld structure. We emphasize basic questions of turbulence, universality in the sense of Kolmogorov’s theory, and the dependence of the statistics on the Reynolds number and scale.},
-	language = {en},
-	number = {1},
-	urldate = {2024-09-19},
-	journal = {Annual Review of Fluid Mechanics},
-	author = {Ishihara, Takashi and Gotoh, Toshiyuki and Kaneda, Yukio},
-	month = jan,
-	year = {2009},
-	pages = {165--180},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\GRM7ZB7Z\\Ishihara et al. - 2009 - Study of High–Reynolds Number Isotropic Turbulence by Direct Numerical Simulation.pdf:application/pdf},
-}
-
-@article{orszag_numerical_1972,
-	title = {Numerical {Simulation} of {Three}-{Dimensional} {Homogeneous} {Isotropic} {Turbulence}},
-	volume = {28},
-	copyright = {http://link.aps.org/licenses/aps-default-license},
-	issn = {0031-9007},
-	url = {https://link.aps.org/doi/10.1103/PhysRevLett.28.76},
-	doi = {10.1103/PhysRevLett.28.76},
-	language = {en},
-	number = {2},
-	urldate = {2024-09-19},
-	journal = {Physical Review Letters},
-	author = {Orszag, Steven A. and Patterson, G. S.},
-	month = jan,
-	year = {1972},
-	pages = {76--79},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\HS6J2SNG\\Orszag and Patterson - 1972 - Numerical Simulation of Three-Dimensional Homogeneous Isotropic Turbulence.pdf:application/pdf},
-}
-
-@article{guseva_history_2016,
-	title = {History effects in the sedimentation of light aerosols in turbulence: {The} case of marine snow},
-	volume = {1},
-	copyright = {http://link.aps.org/licenses/aps-default-license},
-	issn = {2469-990X},
-	shorttitle = {History effects in the sedimentation of light aerosols in turbulence},
-	url = {https://link.aps.org/doi/10.1103/PhysRevFluids.1.074203},
-	doi = {10.1103/PhysRevFluids.1.074203},
-	language = {en},
-	number = {7},
-	urldate = {2024-09-19},
-	journal = {Physical Review Fluids},
-	author = {Guseva, Ksenia and Daitche, Anton and Feudel, Ulrike and Tél, Tamás},
-	month = nov,
-	year = {2016},
-	pages = {074203},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\X6MPJ6NT\\Guseva et al. - 2016 - History effects in the sedimentation of light aerosols in turbulence The case of marine snow.pdf:application/pdf},
-}
-
-@article{jaganathan_bassetboussinesq_2023,
-	title = {The {Basset}–{Boussinesq} history force: its neglect, validity, and recent numerical developments},
-	volume = {11},
-	issn = {2296-424X},
-	shorttitle = {The {Basset}–{Boussinesq} history force},
-	url = {https://www.frontiersin.org/articles/10.3389/fphy.2023.1167338/full},
-	doi = {10.3389/fphy.2023.1167338},
-	abstract = {Particle-laden flows are ubiquitous, ranging across systems such as platelets in blood, dust storms, marine snow, and cloud droplets. The dynamics of a small particle in such non-uniform flows, under the idealization of being rigid and spherical, is described by the Maxey–Riley–Gatignol equation, which includes the Basset–Boussinesq history force among other better-understood forces. The history force, which is an integral over time with a weakly singular kernel, is often neglected, not because such neglect is known to be justified, but because it is difficult to be included in general scenarios. It is becoming increasingly evident that there are situations where neglecting this force might not be valid. In this review, after introducing classical knowledge about the history force, we outline recent studies that suggest alternative forms for it and discuss the range of validity of each, and describe recent numerical methods that have been developed to efficiently compute the history force. The question of whether the history force matters requires careful consideration and can be settled only with its accurate inclusion. We hope this review will help researchers addressing the multitude of open questions related to particulate flows to account for this effect.},
-	language = {en},
-	urldate = {2024-09-19},
-	journal = {Frontiers in Physics},
-	author = {Jaganathan, Divya and Prasath, S. Ganga and Govindarajan, Rama and Vasan, Vishal},
-	month = may,
-	year = {2023},
-	pages = {1167338},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\7RR6SHFY\\Jaganathan et al. - 2023 - The Basset–Boussinesq history force its neglect, validity, and recent numerical developments.pdf:application/pdf},
-}
-
-@article{wilkinson_caustics_2005,
-	title = {Caustics in turbulent aerosols},
-	volume = {71},
-	issn = {0295-5075, 1286-4854},
-	url = {https://iopscience.iop.org/article/10.1209/epl/i2004-10532-7},
-	doi = {10.1209/epl/i2004-10532-7},
-	abstract = {Networks of caustics can occur in the distribution of particles suspended in a randomly moving gas. These can facilitate coagulation of particles by bringing them into close proximity, even in cases where the trajectories do not coalesce. The evolution of these caustic patterns depends upon the Lyapunov exponents λ1, λ2 of the suspended particles, as well as the rate J at which particles encounter caustics. We develop a theory determining the quantities J, λ1, λ2 from the statistical properties of the gas ﬂow, in the limit of short correlation times.},
-	language = {en},
-	number = {2},
-	urldate = {2024-09-19},
-	journal = {Europhysics Letters (EPL)},
-	author = {Wilkinson, M and Mehlig, B},
-	month = jul,
-	year = {2005},
-	pages = {186--192},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\YBMTFI45\\Wilkinson and Mehlig - 2005 - Caustics in turbulent aerosols.pdf:application/pdf},
-}
-
-@article{gustavsson_inertial-particle_2012,
+@article{gustavssonInertialparticleDynamicsTurbulent2012,
 	title = {Inertial-particle dynamics in turbulent flows: caustics, concentration fluctuations and random uncorrelated motion},
 	volume = {14},
 	issn = {1367-2630},
@@ -177,24 +68,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\7R9HT8K6\\Gustavsson et al. - 2012 - Inertial-particle dynamics in turbulent flows caustics, concentration fluctuations and random uncor.pdf:application/pdf},
 }
 
-@article{lohse_ultimate_2024,
-	title = {Ultimate {Rayleigh}-{Bénard} turbulence},
-	volume = {96},
-	issn = {0034-6861, 1539-0756},
-	url = {https://link.aps.org/doi/10.1103/RevModPhys.96.035001},
-	doi = {10.1103/RevModPhys.96.035001},
-	language = {en},
-	number = {3},
-	urldate = {2024-09-19},
-	journal = {Reviews of Modern Physics},
-	author = {Lohse, Detlef and Shishkina, Olga},
-	month = aug,
-	year = {2024},
-	pages = {035001},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\ZVHYKIES\\Lohse and Shishkina - 2024 - Ultimate Rayleigh-Bénard turbulence.pdf:application/pdf},
-}
-
-@article{ijzermans_measuring_2009,
+@article{ijzermansMeasuringSegregationInertial2009,
 	title = {Measuring segregation of inertial particles in turbulence by a full {Lagrangian} approach},
 	volume = {80},
 	copyright = {http://link.aps.org/licenses/aps-default-license},
@@ -212,14 +86,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\2QSAF2IT\\IJzermans et al. - 2009 - Measuring segregation of inertial particles in turbulence by a full Lagrangian approach.pdf:application/pdf},
 }
 
-@article{orr_stability_nodate,
-	title = {The {Stability} or {Instability} of the {Steady} {Motions} of a {Perfect} {Liquid} and of a {Viscous} {Liquid}. {Part} {II}: {A} {Viscous} {Liquid}},
-	language = {en},
-	author = {Orr, William M'F},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\S88CU7CT\\Orr - The Stability or Instability of the Steady Motions of a Perfect Liquid and of a Viscous Liquid. Part.pdf:application/pdf},
-}
-
-@article{pumir_collisional_2016,
+@article{pumirCollisionalAggregationDue2016,
 	title = {Collisional {Aggregation} {Due} to {Turbulence}},
 	volume = {7},
 	issn = {1947-5454, 1947-5462},
@@ -237,7 +104,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\ICBIVJBY\\Pumir and Wilkinson - 2016 - Collisional Aggregation Due to Turbulence.pdf:application/pdf},
 }
 
-@article{varaksin_collision_2019,
+@article{varaksinCollisionParticlesDroplets2019,
 	title = {Collision of {Particles} and {Droplets} in {Turbulent} {Two}-{Phase} {Flows}},
 	volume = {57},
 	issn = {0018-151X, 1608-3156},
@@ -252,12 +119,10 @@
 	month = jul,
 	year = {2019},
 	pages = {555--572},
-	annote = {מאגד מידע טוב
-},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\VIM7I6MX\\Varaksin - 2019 - Collision of Particles and Droplets in Turbulent Two-Phase Flows.pdf:application/pdf},
 }
 
-@article{you_direct_2008,
+@article{youDirectNumericalSimulation2008,
 	title = {Direct numerical simulation of particle collisions in two-phase flows with a meshless method},
 	volume = {63},
 	issn = {00092509},
@@ -274,7 +139,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\P4ITH9L2\\You et al. - 2008 - Direct numerical simulation of particle collisions in two-phase flows with a meshless method.pdf:application/pdf},
 }
 
-@article{lv_effects_2014,
+@article{lvEffectsParticlesCollision2014,
 	title = {Effects of {Particles} {Collision} on {Separating} {Gas}–{Particle} {Two}-{Phase} {Turbulent} {Flows}},
 	volume = {39},
 	copyright = {http://www.springer.com/tdm},
@@ -292,7 +157,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\LJWRKK48\\Lv et al. - 2014 - Effects of Particles Collision on Separating Gas–Particle Two-Phase Turbulent Flows.pdf:application/pdf},
 }
 
-@book{gidaspow_multiphase_2004,
+@book{gidaspowMultiphaseFlowFluidization2004,
 	address = {Boston},
 	title = {Multiphase flow and fluidization: continuum and kinetic theory descriptions},
 	isbn = {978-0-12-282470-8},
@@ -304,7 +169,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\MFPJ525U\\Gidaspow - 2004 - Multiphase flow and fluidization continuum and kinetic theory descriptions.pdf:application/pdf},
 }
 
-@article{saccone_effect_2022,
+@article{sacconeEffectRoughnessElongated2022,
 	title = {Effect of roughness on elongated particles in turbulent channel flow},
 	volume = {152},
 	issn = {03019322},
@@ -321,7 +186,7 @@
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\VNM6GKYI\\Saccone et al. - 2022 - Effect of roughness on elongated particles in turbulent channel flow.pdf:application/pdf},
 }
 
-@book{nichols_real_2018,
+@book{nicholsRealFoodPregnancy2018,
 	address = {United States?},
 	edition = {First edition},
 	title = {Real food for pregnancy: the science and wisdom of optimal prenatal nutrition},
@@ -336,7 +201,7 @@
 	file = {Ebook:C\:\\Users\\bennyv\\Zotero\\storage\\CAE9T3HD\\Nichols - 2018 - Real food for pregnancy the science and wisdom of optimal prenatal nutrition.epub:application/epub+zip},
 }
 
-@article{heng_ou_nine_2022,
+@article{hengouNineGoldenMonths2022,
 	title = {Nine {Golden} {Months}: {The} {Essential} {Art} of {Nurturing} the {Mother}-to-{Be}},
 	copyright = {© 2022},
 	language = {en},
@@ -350,7 +215,7 @@ Publisher: Abrams Image},
 	file = {Ebook:C\:\\Users\\bennyv\\Zotero\\storage\\JWGQE6KC\\Heng Ou - 2022 - Nine Golden Months The Essential Art of Nurturing the Mother-to-Be.epub:application/epub+zip},
 }
 
-@book{simkin_birth_2018,
+@book{simkinBirthPartner5th2018,
 	address = {Minneapolis},
 	title = {Birth {Partner} 5th {Edition}: {A} {Complete} {Guide} to {Childbirth} for {Dads}, {Partners}, {Doulas}, and {All} {Other} {Labor} {Companions}},
 	isbn = {978-1-55832-911-9},
@@ -363,7 +228,7 @@ Publisher: Abrams Image},
 	file = {Ebook:C\:\\Users\\bennyv\\Zotero\\storage\\Q9G7LZQL\\Simkin - 2018 - Birth Partner 5th Edition A Complete Guide to Childbirth for Dads, Partners, Doulas, and All Other.epub:application/epub+zip},
 }
 
-@book{altmann_caring_2019,
+@book{altmannCaringYourBaby2019,
 	title = {Caring for {Your} {Baby} and {Young} {Child}},
 	copyright = {All rights reserved},
 	abstract = {The seventh edition of Caring for Your Baby and Young Child, Birth to Age 5 is the gold-standard reference guide for parents from the most trusted source available - the 67,000-member American Academy of Pediatrics. Everything on basic childcare is covered in our newly revised and updated top-selling book, with new information on everything including allergies, vaccines, and probiotics. What\&\#8217;s the best way to prevent food allergies? How can you get your infant to sleep through the night? How can you keep your child from getting sick? How do you navigate screen time? How do you know if your child has ASD or ADHD, and how can you help? What environmental dangers should you be aware of for your child\&\#8217;s health? The answers to these questions - and thousands more - are delivered in a warm, accessible, user-friendly style. This eBook is divided into two parts: the first part provides everything a parent needs to know to take the best care of their child. The second part describes situations in depth - everything from colds to illnesses, allergies, and even environmental hazards. This is the trusted guide a parent turns to again and again as his or her baby grows.},
@@ -376,7 +241,7 @@ Publisher: Abrams Image},
 	file = {Ebook:C\:\\Users\\bennyv\\Zotero\\storage\\WXGZCKQ9\\Altmann and Hill - 2019 - Caring for Your Baby and Young Child.epub:application/epub+zip},
 }
 
-@article{taylor_motion_1923,
+@article{taylorMotionEllipsoidalParticles1923,
 	title = {The motion of ellipsoidal particles in a viscous fluid},
 	volume = {103},
 	issn = {0950-1207},
@@ -392,7 +257,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\3YNDSBWA\\The motion of ellipsoidal particles in a viscous fluid.pdf:application/pdf},
 }
 
-@article{dotto_orientation_2019,
+@article{dottoOrientationDistributionDeformation2019,
 	title = {Orientation, distribution, and deformation of inertial flexible fibers in turbulent channel flow},
 	volume = {230},
 	issn = {0001-5970, 1619-6937},
@@ -410,7 +275,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\GEEEEBGZ\\Dotto and Marchioli - 2019 - Orientation, distribution, and deformation of inertial flexible fibers in turbulent channel flow.pdf:application/pdf},
 }
 
-@article{wang_large_2004,
+@article{wangLargeEddySimulation2004,
 	title = {Large eddy simulation and experimental studies of a confined turbulent swirling flow},
 	volume = {16},
 	issn = {1070-6631, 1089-7666},
@@ -428,7 +293,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\7GAD57ZH\\Wang et al. - 2004 - Large eddy simulation and experimental studies of a confined turbulent swirling flow.pdf:application/pdf},
 }
 
-@article{voth_anisotropic_2017,
+@article{vothAnisotropicParticlesTurbulence2017,
 	title = {Anisotropic {Particles} in {Turbulence}},
 	volume = {49},
 	issn = {0066-4189, 1545-4479},
@@ -446,7 +311,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\TA4GCJEU\\Voth and Soldati - 2017 - Anisotropic Particles in Turbulence.pdf:application/pdf},
 }
 
-@article{paschkewitz_dynamic_2005,
+@article{paschkewitzDynamicMechanismTurbulent2005,
 	title = {The dynamic mechanism for turbulent drag reduction using rigid fibers based on {Lagrangian} conditional statistics},
 	volume = {17},
 	issn = {1070-6631, 1089-7666},
@@ -464,7 +329,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\HHY5YI3S\\Paschkewitz et al. - 2005 - The dynamic mechanism for turbulent drag reduction using rigid fibers based on Lagrangian conditiona.pdf:application/pdf},
 }
 
-@article{lucca-negro_vortex_2001,
+@article{lucca-negroVortexBreakdownReview2001,
 	title = {Vortex breakdown: a review},
 	volume = {27},
 	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
@@ -484,7 +349,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\B6EVQ7M2\\Lucca-Negro and O'Doherty - 2001 - Vortex breakdown a review.pdf:application/pdf},
 }
 
-@article{vignat_suitability_2022,
+@article{vignatSuitabilityDifferentSwirl2022,
 	title = {The suitability of different swirl number definitions for describing swirl flows: {Accurate}, common and (over-) simplified formulations},
 	volume = {89},
 	issn = {03601285},
@@ -501,7 +366,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\ARQ4S6TT\\Vignat et al. - 2022 - The suitability of different swirl number definitions for describing swirl flows Accurate, common a.pdf:application/pdf},
 }
 
-@article{levy_drying_1998,
+@article{levyDryingWetSolid1998,
 	title = {Drying of wet solid particles in a steady-state one-dimensional flow},
 	volume = {95},
 	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
@@ -519,21 +384,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\DZPUU9Z6\\Levy et al. - 1998 - Drying of wet solid particles in a steady-state one-dimensional flow.pdf:application/pdf},
 }
 
-@book{gyr_drag_1995,
-	address = {Dordrecht},
-	series = {Fluid mechanics and its applications},
-	title = {Drag reduction of turbulent flows by additives},
-	isbn = {978-0-7923-3485-9},
-	language = {eng},
-	number = {32},
-	publisher = {Kluwer Academic Publ},
-	author = {Gyr, Albert and Bewersdorff, H.-W.},
-	year = {1995},
-	annote = {Bibliography: p219-229. - Includes index},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\CPXRGVCP\\Gyr and Bewersdorff - 1995 - Drag reduction of turbulent flows by additives.pdf:application/pdf},
-}
-
-@article{pinsky_comparison_1998,
+@article{pinskyComparisonCollisionVelocity1998,
 	title = {Comparison of collision velocity differences of drops and graupel particles in a very turbulent cloud},
 	volume = {49},
 	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
@@ -551,7 +402,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\9RZTRGQD\\Pinsky et al. - 1998 - Comparison of collision velocity differences of drops and graupel particles in a very turbulent clou.pdf:application/pdf},
 }
 
-@article{deutsch_aggregation-disorder_1985,
+@article{deutschAggregationdisorderTransitionInduced1985,
 	title = {Aggregation-disorder transition induced by fluctuating random forces},
 	volume = {18},
 	issn = {0305-4470, 1361-6447},
@@ -567,7 +418,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\UUGSCCTD\\Deutsch - 1985 - Aggregation-disorder transition induced by fluctuating random forces.pdf:application/pdf},
 }
 
-@article{lambert_methodology_2020,
+@article{lambertMethodologyNumericalSimulations2020,
 	title = {Methodology for numerical simulations of ellipsoidal particle‐laden flows},
 	volume = {92},
 	issn = {0271-2091, 1097-0363},
@@ -586,38 +437,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\TX8B7DBR\\Lambert et al. - 2020 - Methodology for numerical simulations of ellipsoidal particle‐laden flows.pdf:application/pdf},
 }
 
-@article{lefebvre-lepot_accurate_2015,
-	title = {An accurate method to include lubrication forces in numerical simulations of dense {Stokesian} suspensions},
-	volume = {769},
-	copyright = {https://www.cambridge.org/core/terms},
-	issn = {0022-1120, 1469-7645},
-	url = {https://www.cambridge.org/core/product/identifier/S0022112015001019/type/journal_article},
-	doi = {10.1017/jfm.2015.101},
-	abstract = {We address the problem of computing the hydrodynamic forces and torques among
-              
-                
-                  
-                  \$N\$
-                
-              
-              solid spherical particles moving with given rotational and translational velocities in Stokes flow. We consider the original fluid–particle model without introducing new hypotheses or models. Our method includes the singular lubrication interactions which may occur when some particles come close to one another. The main new feature is that short-range interactions are propagated to the whole flow, including accurately the many-body lubrication interactions. The method builds on a pre-existing fluid solver and is flexible with respect to the choice of this solver. The error is the error generated by the fluid solver when computing non-singular flows (i.e. with negligible short-range interactions). Therefore, only a small number of degrees of freedom are required and we obtain very accurate simulations within a reasonable computational cost. Our method is closely related to a method proposed by Sangani \& Mo (
-              Phys. Fluids
-              , vol. 6, 1994, pp. 1653–1662) but, in contrast with the latter, it does not require parameter tuning. We compare our method with the Stokesian dynamics of Durlofsky
-              et al.
-               (
-              J. Fluid Mech.
-              , vol. 180, 1987, pp. 21–49) and show the higher accuracy of the former (both by analysis and by numerical experiments).},
-	language = {en},
-	urldate = {2025-01-06},
-	journal = {Journal of Fluid Mechanics},
-	author = {Lefebvre-Lepot, A. and Merlet, B. and Nguyen, T. N.},
-	month = apr,
-	year = {2015},
-	pages = {369--386},
-	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\SMF25V5H\\Lefebvre-Lepot et al. - 2015 - An accurate method to include lubrication forces in numerical simulations of dense Stokesian suspens.pdf:application/pdf},
-}
-
-@article{lattanzi_stochastic_2020,
+@article{lattanziStochasticModelsCapturing2020,
 	title = {Stochastic models for capturing dispersion in particle-laden flows},
 	volume = {903},
 	issn = {0022-1120, 1469-7645},
@@ -663,7 +483,7 @@ Publisher: Abrams Image},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\IH7WVW23\\Lattanzi et al. - 2020 - Stochastic models for capturing dispersion in particle-laden flows.pdf:application/pdf},
 }
 
-@article{carati_modelling_2001,
+@article{caratiModellingSubgridscaleFilteredscale2001,
 	title = {On the modelling of the subgrid-scale and filtered-scale stress tensors in large-eddy simulation},
 	volume = {441},
 	copyright = {https://www.cambridge.org/core/terms},
@@ -700,7 +520,7 @@ models and, surprisingly, the dynamic procedure.},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\56MR5AAM\\Carati et al. - 2001 - On the modelling of the subgrid-scale and filtered-scale stress tensors in large-eddy simulation.pdf:application/pdf},
 }
 
-@article{billant_experimental_1998,
+@article{billantExperimentalStudyVortex1998,
 	title = {Experimental study of vortex breakdown in swirling jets},
 	volume = {376},
 	copyright = {https://www.cambridge.org/core/terms},
@@ -803,7 +623,7 @@ by secondary recirculating motions that are independent of confinement
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\N38L64BF\\Billant et al. - 1998 - Experimental study of vortex breakdown in swirling jets.pdf:application/pdf},
 }
 
-@article{escudier_observations_1984,
+@article{escudierObservationsFlowProduced1984,
 	title = {Observations of the flow produced in a cylindrical container by a rotating endwall},
 	volume = {2},
 	copyright = {http://www.springer.com/tdm},
@@ -821,7 +641,7 @@ by secondary recirculating motions that are independent of confinement
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\9G6ZHB4Q\\Escudier - 1984 - Observations of the flow produced in a cylindrical container by a rotating endwall.pdf:application/pdf},
 }
 
-@article{carrion_mechanism_2020,
+@article{carrionMechanismDisappearanceVortex2020,
 	title = {Mechanism of {Disappearance} of {Vortex} {Breakdown} in a {Confined} {Flow}},
 	volume = {29},
 	issn = {1810-2328, 1990-5432},
@@ -839,7 +659,7 @@ by secondary recirculating motions that are independent of confinement
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\IX8Y3ETD\\Carrion et al. - 2020 - Mechanism of Disappearance of Vortex Breakdown in a Confined Flow.pdf:application/pdf},
 }
 
-@article{reynolds_similarity_1962,
+@article{reynoldsSimilaritySwirlingWakes1962,
 	title = {Similarity in swirling wakes and jets},
 	volume = {14},
 	copyright = {https://www.cambridge.org/core/terms},
@@ -866,7 +686,7 @@ by secondary recirculating motions that are independent of confinement
 	file = {23751371_17738449970004361:C\:\\Users\\bennyv\\Zotero\\storage\\FEAXSRUM\\23751371_17738449970004361.pdf:application/pdf},
 }
 
-@book{wu_vorticity_2006,
+@book{wuVorticityVortexDynamics2006,
 	address = {Berlin, Heidelberg},
 	title = {Vorticity and {Vortex} {Dynamics}},
 	isbn = {978-3-540-29027-8 978-3-540-29028-5},
@@ -877,4 +697,71 @@ by secondary recirculating motions that are independent of confinement
 	collaborator = {Zhou, Ming-De and Ma, Hui-Yang},
 	year = {2006},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\22AMWBEZ\\Wu - 2006 - Vorticity and Vortex Dynamics.pdf:application/pdf},
+}
+
+@book{batchelorIntroductionFluidDynamics2010,
+	address = {Cambridge},
+	edition = {14. print},
+	series = {Cambridge mathematical library},
+	title = {An {Introduction} to fluid dynamics},
+	isbn = {978-0-521-66396-0},
+	language = {en},
+	publisher = {Cambridge Univ. Press},
+	author = {Batchelor, G. K.},
+	year = {2010},
+	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\M9PX47XL\\Batchelor - 2010 - An Introduction to fluid dynamics.pdf:application/pdf},
+}
+
+@article{piomelliLargeeddySimulationAchievements1999,
+	title = {Large-eddy simulation: achievements and challenges},
+	volume = {35},
+	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {03760421},
+	shorttitle = {Large-eddy simulation},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0376042198000141},
+	doi = {10.1016/S0376-0421(98)00014-1},
+	language = {en},
+	number = {4},
+	urldate = {2025-01-09},
+	journal = {Progress in Aerospace Sciences},
+	author = {Piomelli, U.},
+	month = may,
+	year = {1999},
+	pages = {335--362},
+	file = {LES:C\:\\Users\\bennyv\\Zotero\\storage\\WXVTYXJA\\LES.pdf:application/pdf},
+}
+
+@article{foxLargeEddySimulationToolsMultiphase,
+	title = {Large-{Eddy}-{Simulation} {Tools} for {Multiphase} {Flows}},
+	abstract = {Multiphase ﬂows occurring in nature and in technological applications are often turbulent. The large range of length scales and timescales in turbulent multiphase ﬂows makes direct numerical simulation of the microscale governing equations intractable for many applications. In this article we review a systematic approach for developing large-eddy-simulation (LES) tools for dispersed multiphase ﬂows starting from the microscale model. A key intermediate step is the mesoscopic model for the dispersed phase, formulated in terms of kinetic equations, that contains the physical models for the ﬂow. Owing to the phase-space variables, direct solution of the mesoscopic model is usually intractable, and additional mathematical approximations are introduced to arrive at a macroscopic model. We show that self-conditioned LES models can be derived for both the mesoscopic and macroscopic models, but the former is preferred to ensure consistency and physical accuracy. The principal difﬁculties and open challenges in closing the LES model equations are highlighted.},
+	language = {en},
+	author = {Fox, Rodney O},
+	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\W8BFQF35\\Fox - Large-Eddy-Simulation Tools for Multiphase Flows.pdf:application/pdf},
+}
+
+@article{zouLARGEEDDYSIMULATION,
+	title = {{LARGE} {EDDY} {SIMULATION} {OF} {TURBULENT} {FLOWS}},
+	abstract = {Large eddy simulation (LES) is a technique intermediate between the direct numerical simulation (DNS) of turbulent flow and the solution of the Reynolds-averaged equations. The technique of LES is now gradually used to simulate turbulent flows in engineering. Methods for LES will be reviewed in this paper. Applying LES for simulating turbulent flows, both incompressible and compressible, is outlined. This review article would be useful for those starting to consider using LES for turbulent flow simulations.},
+	language = {en},
+	author = {Zou, G W and Liu, S L and Chow, W K and Gao, Y},
+	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\GNXKJ798\\Zou et al. - LARGE EDDY SIMULATION OF TURBULENT FLOWS.pdf:application/pdf},
+}
+
+@article{zhiyinLargeeddySimulationPresent2015,
+	title = {Large-eddy simulation: {Past}, present and the future},
+	volume = {28},
+	issn = {10009361},
+	shorttitle = {Large-eddy simulation},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1000936114002064},
+	doi = {10.1016/j.cja.2014.12.007},
+	abstract = {Large-eddy simulation (LES) was originally proposed for simulating atmospheric ﬂows in the 1960s and has become one of the most promising and successful methodology for simulating turbulent ﬂows with the improvement of computing power. It is now feasible to simulate complex engineering ﬂows using LES. However, apart from the computing power, signiﬁcant challenges still remain for LES to reach a level of maturity that brings this approach to the mainstream of engineering and industrial computations. This paper will describe brieﬂy LES formalism ﬁrst, present a quick glance at its history, review its current state focusing mainly on its applications in transitional ﬂows and gas turbine combustor ﬂows, discuss some major modelling and numerical challenges/issues that we are facing now and in the near future, and ﬁnish with the concluding remarks. ª 2015 Production and hosting by Elsevier Ltd. on behalf of CSAA \& BUAA.},
+	language = {en},
+	number = {1},
+	urldate = {2025-01-13},
+	journal = {Chinese Journal of Aeronautics},
+	author = {Zhiyin, Yang},
+	month = feb,
+	year = {2015},
+	pages = {11--24},
+	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\WJ5UNZZ8\\Zhiyin - 2015 - Large-eddy simulation Past, present and the future.pdf:application/pdf},
 }
